[Bulky] Added some spacing fixes to the item selection list
- Increased spacing between items
- Increased bottom spacing for "Add item"

--- a/web/cobrands/sass/_waste.scss
+++ b/web/cobrands/sass/_waste.scss
@@ -588,7 +588,7 @@ html.js {
     }
 
     hr {
-      margin: 1.2em 0;
+      margin: 2.5em 0;
     }
   }
 }
